Update 'm3piwm168-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe:89b7b5fc14e4afd232b4c154e67a760f1dd5fec0@sha256:d28183d21fa2312d45c412b285431456ab5f81ec2bd1fb52fb04c2ae616c3991

--- a/components/m3piwm168-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/m3piwm168-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: m3piwm168-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:89b7b5fc14e4afd232b4c154e67a760f1dd5fec0@sha256:d28183d21fa2312d45c412b285431456ab5f81ec2bd1fb52fb04c2ae616c3991
+          name: container-image
